infra/workspace/localport/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: localport
  name: localport
  namespace: default
spec:
  ports:
  - port: 80
  selector:
    app: localport
  type: LoadBalancer
