infra/workspace/localport/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localport
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: '*.ws.lab.takutakahashi.dev'
    http:
      paths:
      - backend:
          service:
            name: localport
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ws.lab.takutakahashi.dev
    - '*.ws.lab.takutakahashi.dev'
    secretName: workpsace
